deployment/superset/kustomize/base/deployment-manifest/deployment-supersetdb.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: supersetdb
  labels:
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: supersetdb
    app.kubernetes.io/part-of: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: superset
      app.kubernetes.io/name: supersetdb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: superset
        app.kubernetes.io/name: supersetdb
    spec:
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          terminationMessagePath: /dev/termination-log
          name: supersetdb
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: tcp-postgresql
              containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: superset-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          image: 'registry.redhat.io/rhel8/postgresql-13:1-101'
      restartPolicy: Always
      securityContext: {}
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: superset-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        volumeMode: Filesystem
  updateStrategy:
    type: RollingUpdate
