deployment/superset/kustomize/base/deployment-manifest/service-superset-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: supersetdb
  labels:
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: supersetdb
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: supersetdb
